<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">爆脑猜拳</string>
    <string name="action_settings">Settings</string>
    <string name="tab_shop">兑换</string>
    <string name="tab_caiquan">游戏</string>
    <string name="tab_found">社区</string>
    <string name="tab_myInfo">中心</string>
    <string name="share">分享</string>
    <!-- 登录注册 -->
    <string name="login_no_login">未登录</string> 
    <string name="login_user">账户：</string> 
    <string name="login_userName">用户名：</string> 
    <string name="login_email">邮箱：</string>
    <string name="login_passwd">密码：</string>
    <string name="login_remindPasswd">记住密码</string>
    <string name="login_lossPasswd">忘记密码？</string>
    <string name="login_login">登 &#160;&#160;&#160;&#160; 陆</string>
    <string name="login_register"><u>新玩家，点此注册</u></string>
    <string name="register_passwd_again">确认密码：</string>
    <string name="register_register">注册</string>
    <string name="register_back">返回登录</string>
    <!-- 猜拳 -->
    <string name="cq_game">当前游戏</string>
    <string name="cq_rule">玩法介绍</string>
    <string name="cq_result">最近结果</string>
    <string name="cq_now_game">Now</string>
    <string name="cq_now_no_game">尚无场次</string>
    <string name="cq_now_chose">你的选择：</string>
    <string name="cq_now_no_chose">出拳啦~</string>
    <string name="cq_next_game">Next</string>
    <string name="cq_count_result">计算结果中...</string>
    <string name="cq_selTitle">选择</string>
    <string name="cq_zhenxing_A">A阵营</string> 
    <string name="cq_zhenxing_B">B阵营</string>
    <string name="cq_jian">剪刀</string> 
    <string name="cq_shitou">石头</string>
   <string name="cq_bu">布</string>
   <string name="cq_confirm">出拳</string>
   <string name="cq_zhenxing">阵营</string>
   <string name="cq_jifen">积分</string>
   
    <!-- 猜拳 end--> 
    <!-- 商城 -->    
    <string name="shop_index">兑换大厅</string>
    <string name="shop_appointment">我的预约</string>
    <string name="shop_collection">我的收藏</string>
    <string name="shop_integral">所需积分：</string>
    <string name="shop_apNum">预约人数：</string>
    <string name="shop_endTime">截止时间：</string>
    <string name="shop_timeLeft">倒计时：</string>
    <string name="shop_integralLeft">还差积分：</string>
    <string name="shop_appoint"><u>预约</u></string>
    <string name="shop_appointed"><u>已预约</u></string>
    <string name="shop_collect"><u>收藏</u></string>
    <string name="shop_collected"><u>取消收藏</u></string>
    <string name="shop_buy">我要买</string>
    <!-- 个人中心 -->      
    <string name="set_myInfo">个人中心</string>
    <string name="set_myNotice">我的消息</string>
    <string name="set_more">更多选项</string> 
     <string name="set_userName">用户名</string>
     <string name="set_email">邮箱</string>
    <string name="set_integral">积分</string>
    <string name="set_grade">等级</string>
    <string name="set_reg_time">注册时间</string>
    <string name="set_login_out">退出登录</string>
    <string name="set_edt_userInfo">编辑资料</string>
    <string name="set_clean">清除缓存</string>
    <string name="set_update">检测更新</string>
    <string name="set_team">关于我们</string>
    <string name="set_edt_myInfo">编辑资料</string>
    <string name="set_save">保存</string>
    <string name="set_sex">性别</string>
    <string name="set_sex_man">男</string>
    <string name="set_sex_female">女</string>
    <string name="set_age">年龄</string>
    <string name="set_qq">QQ</string>
    <string name="set_no_set">未设置</string>
    <string name="set_about_version">1.0</string>
    <string name="set_about_title">关于</string>
     <!-- 话题 -->
      <string name="topic_index">话题首页</string>
      <string name="topic_myTp">我的话题</string>
     <string name="topic_myRy">我的回复</string>
     <string name="topic_comment">评论</string>
     <string name="topic_reply_symbol">#</string>
     <string name="topic_reply_hint">给点评论吧...</string>
     <string name="topic_Det_more">话题内容</string>
     <string name="topic_release">发话题</string>
     <string name="topic_send">发送</string>
     <string name="topic_releaseCont_hint">给小伙伴说点什么吧..</string>
 	<string name="search_word">请输入关键字</string>
     <!-- listview string -->
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    
    <!-- bnjz -->
	<string name="input_tips">输入</string>
</resources>
