<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:background="#EBE7E4">
    <RelativeLayout 
         android:id="@+id/top_ret1"
        android:layout_width="match_parent"
         android:layout_height="50dip"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
        android:background="@drawable/top_border_style" 
        >
	        <ImageButton 
		   		android:id="@+id/ibtn_release_back"
			   	android:layout_width="wrap_content" 
			   	android:layout_height="fill_parent" 
			   	android:src="@drawable/header_back"/>
		   	<TextView 
		   	    android:id="@+id/tvw_release_title"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   		android:layout_centerInParent="true"
		   	    android:textColor="@color/contentColor"
                android:textSize="20dp" 
                android:padding="10dip"
                android:singleLine="true"
		   		android:text="@string/topic_release"/>
		  	<TextView 
		   		android:id="@+id/tvw_release_rel"
			   	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:textColor="@color/tab_color"
				android:textSize="16dp"
				android:text="@string/topic_send"
			   	/>
    </RelativeLayout>
	<FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:layout_below="@id/top_ret1"
	    android:background="#FFFFFF">
	    
	    <EditText
	        android:id="@+id/edt_release_con"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:autoLink="web"
	        android:gravity="top"
	        android:hint="@string/topic_releaseCont_hint"
	        android:background="@null"/>
		<LinearLayout 
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5.0dip"
			android:layout_marginBottom="5.0dip"
			android:layout_gravity="right|bottom"
			android:gravity="center"
	        android:clickable="true">
		   	<TextView 
		   	    android:id="@+id/tvw_word_left"
		   	    android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="150"/>
		  
		</LinearLayout>
	        
	</FrameLayout>
</RelativeLayout>
